# hackutd-2023

./: .gitignore  .rtx.toml  README.md  manage.py  pyproject.toml
hackutd2023/: asgi.py  settings.py  urls.py  views.py  wsgi.py
http/openai/: gpt35.http  models.list.http
templates/: base.html  index.html  result.html
