[tool.poetry]
name = "hackutd2023"
version = "0.1.0"
description = ""
authors = ["sudoer777 <git@sudoer.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-tailwind = { version = "^3.6.0", extras = ["reload"] }
slippers = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
